turtleart.polygon20.Polygon20.scala.error
Erreur de compilation :
Polygon20:8: error: Unmatched closing brace '}' ignored here
}
^